--- a/popup.html
+++ b/popup.html
@@ -2,9 +2,13 @@
 <html>
 <head>
   <title>JSON Formatter Toolbar</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css"> 
+  <link rel="stylesheet" href="lib/json-viewer.css"> 
   <script src="lib/json-viewer.min.js"></script> 
+  <script src="popup.js"></script> 
+  <script src="content.js"></script> 
 </head>
+
 <body>
   <div class="toolbar">
     <button id="darkMode">Dark Mode</button>
@@ -13,7 +17,5 @@
     <button id="formattedRaw">Formatted Raw</button>
     <button id="raw">Raw</button>
   </div>
-
-  <script src="popup.js"></script>
 </body>
 </html>
